Fix Dark mode, mobile

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ sup {
 
 hr {
   border: 0;
-  border-top: 1px solid $divider-color;
+  border-top: 1px solid $base-color;
   margin: 1.5em auto;
 }
 
@@ -858,7 +858,7 @@ footer {
 
     width: 100%;
     height: 40px;
-    padding: 0 12.5%;
+    padding: 0 15%;
     width: 100%;
     border-radius: 40px;
     border: 2px solid $link-color;
@@ -1017,7 +1017,7 @@ body.dark-theme {
   }
   
   hr {
-    border-top: 1px solid $divider-color-dark;
+    border-top: 1px solid $base-color-dark;
   }
   
   // Yeun's list style
